<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ShareFile"
    android:background="#e5e4e2">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_margin="5dp"
        android:padding="5dp">

        <EditText
            android:id="@+id/editTextMessage"
            android:layout_width="match_parent"
            android:layout_height="200dp"
            android:gravity="top|left"
            android:hint="@string/msgET"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/btnShare"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/editTextMessage"
            android:layout_marginStart="5dp"
            android:layout_marginTop="62dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:text="@string/sShare" />

        <Button
            android:id="@+id/btnAttachment"
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_below="@id/editTextMessage"
            android:layout_alignParentRight="true"
            android:layout_marginTop="62dp"
            android:layout_marginRight="10dp"
            android:text="@string/sAttach" />


    </RelativeLayout>




</ScrollView>